ui: add minimalist icon footer

--- a/index.html
+++ b/index.html
@@ -49,7 +49,15 @@
 
             <!-- Screens Container -->
             <div id="screenContainer"></div>
+
         </main>
+
+        <!-- Minimal Footer -->
+        <footer class="footer">
+            <span id="footerVersionIcon" title="Version 0.1.0"></span>
+            <a href="https://github.com/FastFingertips" target="_blank" id="footerUserIcon" title="Developer"></a>
+            <a href="https://github.com/FastFingertips/follow-state" target="_blank" id="footerGithubIcon" title="GitHub Repository"></a>
+        </footer>
 
         <!-- Modals & Overlays -->
         <div id="overlayContainer"></div>
