feat: add amoled mode toggle

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                 </div>
                 
                 <div class="header-controls">
+                    <button class="icon-btn" id="themeToggle" title="AMOLED Mode">
+                        <span id="themeIcon"></span>
+                    </button>
                     <button class="icon-btn" id="fullscreenToggle" title="Toggle Fullscreen">
                         <span id="fullscreenIcon"></span>
                     </button>
